--- a/DamonHelper/packages.config
+++ b/DamonHelper/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="BouncyCastle" version="1.8.3.1" targetFramework="net461" />
   <package id="chilkat-x64" version="9.5.0.75" targetFramework="net461" />
+  <package id="Dapper" version="1.50.5" targetFramework="net461" />
   <package id="Humanizer.Core" version="2.2.0" targetFramework="net461" />
   <package id="Humanizer.Core.zh-CN" version="2.2.0" targetFramework="net461" />
   <package id="Microsoft.AspNetCore.Cryptography.Internal" version="2.0.3" targetFramework="net461" />
@@ -22,5 +23,8 @@
   <package id="Microsoft.Extensions.Options.ConfigurationExtensions" version="2.0.2" targetFramework="net461" />
   <package id="Microsoft.Extensions.Primitives" version="2.0.0" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net461" />
+  <package id="System.Net.Http" version="2.0.20126.16343" targetFramework="net461" />
+  <package id="System.Net.Http.Formatting.Extension" version="5.2.3.0" targetFramework="net461" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.4.0" targetFramework="net461" />
+  <package id="System.ValueTuple" version="4.3.0" targetFramework="net461" />
 </packages>
