--- a/DamonHelper/DamonHelper.csproj
+++ b/DamonHelper/DamonHelper.csproj
@@ -33,7 +33,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <ApplicationIcon>icon-256.ico</ApplicationIcon>
+    <ApplicationIcon>
+    </ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="BouncyCastle.Crypto, Version=1.8.3.0, Culture=neutral, PublicKeyToken=0e99375e54769942">
@@ -81,7 +82,7 @@
     <Compile Include="CancelOverdueFeeForm.Designer.cs">
       <DependentUpon>CancelOverdueFeeForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="Config\Config.cs" />
+    <Compile Include="Settings\Config.cs" />
     <Compile Include="Models\Order.cs" />
     <Compile Include="Models\Permission.cs" />
     <Compile Include="Models\SimpleTenancy.cs" />
@@ -91,7 +92,7 @@
     <Compile Include="RegisterTenancyForm.Designer.cs">
       <DependentUpon>RegisterTenancyForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="Config\SqlConnectionExtensions.cs" />
+    <Compile Include="Settings\SqlConnectionExtensions.cs" />
     <Compile Include="sys\DateTimeOffsetExtentions.cs" />
     <Compile Include="Home.cs">
       <SubType>Form</SubType>
@@ -133,6 +134,10 @@
     <EmbeddedResource Include="TalosEncrytForm.resx">
       <DependentUpon>TalosEncrytForm.cs</DependentUpon>
     </EmbeddedResource>
+    <None Include="appsettings.development.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="appsettings.production.json" />
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -148,9 +153,8 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Help\help.txt" />
-    <Content Include="Help\ILMerge.exe" />
-    <Content Include="icon-256.ico" />
+    <Content Include="help\help.txt" />
+    <Content Include="help\ILMerge.exe" />
     <Content Include="icons\icon-256.ico" />
     <Content Include="icons\icon-64.ico" />
   </ItemGroup>
