--- a/DamonHelper/DamonHelper.csproj
+++ b/DamonHelper/DamonHelper.csproj
@@ -81,6 +81,7 @@
     <Compile Include="CancelOverdueFeeForm.Designer.cs">
       <DependentUpon>CancelOverdueFeeForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Helper\SessionIdHelper.cs" />
     <Compile Include="Settings\Config.cs" />
     <Compile Include="Models\Order.cs" />
     <Compile Include="Models\Permission.cs" />
@@ -111,6 +112,12 @@
       <DependentUpon>TalosEncrytForm.cs</DependentUpon>
     </Compile>
     <Compile Include="sys\Time.cs" />
+    <Compile Include="UnlockForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UnlockForm.Designer.cs">
+      <DependentUpon>UnlockForm.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="CancelOverdueFeeForm.resx">
       <DependentUpon>CancelOverdueFeeForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -135,6 +142,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="appsettings.development.json" />
     <EmbeddedResource Include="appsettings.production.json" />
+    <EmbeddedResource Include="UnlockForm.resx">
+      <DependentUpon>UnlockForm.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -150,8 +160,8 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="help\help.txt" />
-    <Content Include="help\ILMerge.exe" />
+    <Content Include="tool\help.txt" />
+    <Content Include="tool\ILMerge.exe" />
     <Content Include="icon-256.ico" />
     <Content Include="icons\icon-256.ico" />
     <Content Include="icons\icon-64.ico" />
