--- a/DamonHelper/appsettings.development.json
+++ b/DamonHelper/appsettings.development.json
@@ -1,4 +1,7 @@
 ﻿{
   "TalosDbConnectionString": "Data Source=kc-fengniaowu-dev.database.chinacloudapi.cn;Initial Catalog=KC.Fengniaowu.Talos-Dev;Integrated Security=False;User ID=KC;Password=V245ZGxbEhn3Sakk;Connect Timeout=60;Encrypt=False;TrustServerCertificate=True;ApplicationIntent=ReadWrite;MultiSubnetFailover=False",
-  "TalosBaseAddress": "https://kc-fengniaowu-talos.dev.kolibre.credit/"
+  "TalosBaseAddress": "https://kc-fengniaowu-talos.dev.kolibre.credit/",
+  "TenancyId": "2C29A4AFDE3C47648BF40535CA2B5290",
+  "LoginAccount": "13100000000",
+  "Password": "111111"
 }
