--- a/Demo/SignalRDemo/SignalRDemo.csproj
+++ b/Demo/SignalRDemo/SignalRDemo.csproj
@@ -20,6 +20,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="KC.Foundation" Version="4.7.0" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.1.2" PrivateAssets="All" />
     <PackageReference Include="Microsoft.AspNetCore.SignalR.Client.Core" Version="1.0.4" />
