--- a/SignalRClientDemo/SignalRClientDemo.csproj
+++ b/SignalRClientDemo/SignalRClientDemo.csproj
@@ -6,8 +6,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Exceptionless" Version="4.3.2012" />
     <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="1.0.4" />
-    <PackageReference Include="Microsoft.AspNetCore.SignalR.Client.Core" Version="1.0.4" />
   </ItemGroup>
 
 </Project>
