--- a/CQ.Foundation.Console/CQ.Foundation.Console.csproj
+++ b/CQ.Foundation.Console/CQ.Foundation.Console.csproj
@@ -6,7 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\CQ.Foundation\CQ.Foundation.csproj" />
+    <PackageReference Include="CQ.Foundation" Version="1.2.0" />
   </ItemGroup>
 
 </Project>
