--- a/DamonHelper/DamonHelper.csproj
+++ b/DamonHelper/DamonHelper.csproj
@@ -47,6 +47,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Messaging" />
     <Reference Include="System.Net" />
     <Reference Include="System.Net.Http, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <HintPath>..\packages\System.Net.Http.2.0.20126.16343\lib\net40\System.Net.Http.dll</HintPath>
@@ -75,11 +76,23 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ApartmentMegrateForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ApartmentMegrateForm.Designer.cs">
+      <DependentUpon>ApartmentMegrateForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="CancelOverdueFeeForm.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="CancelOverdueFeeForm.Designer.cs">
       <DependentUpon>CancelOverdueFeeForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="ConfirmContractForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ConfirmContractForm.Designer.cs">
+      <DependentUpon>ConfirmContractForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Helper\CustomEventArgs.cs" />
     <Compile Include="Helper\DataHelper.cs" />
@@ -130,6 +143,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="sys\GuidExtensions.cs" />
     <Compile Include="sys\ID.cs" />
+    <Compile Include="sys\ListExtensions.cs" />
     <Compile Include="sys\RSAHelper.cs" />
     <Compile Include="TalosEncrytForm.cs">
       <SubType>Form</SubType>
@@ -144,8 +158,14 @@
     <Compile Include="UnlockForm.Designer.cs">
       <DependentUpon>UnlockForm.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="ApartmentMegrateForm.resx">
+      <DependentUpon>ApartmentMegrateForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="CancelOverdueFeeForm.resx">
       <DependentUpon>CancelOverdueFeeForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ConfirmContractForm.resx">
+      <DependentUpon>ConfirmContractForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Home.resx">
       <DependentUpon>Home.cs</DependentUpon>
