--- a/SignalRClientDemo/SignalRClientDemo.csproj
+++ b/SignalRClientDemo/SignalRClientDemo.csproj
@@ -8,6 +8,7 @@
   <ItemGroup>
     <PackageReference Include="Exceptionless" Version="4.3.2012" />
     <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="1.0.4" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
   </ItemGroup>
 
 </Project>
