添加防重过滤器

--- a/Demo/IdentityDemo/appsettings.Development.json
+++ b/Demo/IdentityDemo/appsettings.Development.json
@@ -5,5 +5,11 @@
       "System": "Information",
       "Microsoft": "Information"
     }
+  },
+  "RedisOptions": {
+    "Enable": true,
+    "ConfigurationString": "kc-fengniaowu-redis-dev.redis.cache.chinacloudapi.cn:6380,password=zSepyNAgOC6P0Fh198YlZGBrxMEIskPwHzIevetJFO4=,ssl=True,abortConnect=False,connectTimeout=15000",
+    "Database": 0,
+    "InstanceName": "Announcement"
   }
 }
