--- a/CQ.Foundation/CQ.Foundation.csproj
+++ b/CQ.Foundation/CQ.Foundation.csproj
@@ -16,4 +16,8 @@
     </EmbeddedResource>
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
+  </ItemGroup>
+
 </Project>
