--- a/CQ.Redis/CQ.Redis.csproj
+++ b/CQ.Redis/CQ.Redis.csproj
@@ -8,12 +8,13 @@
     <Company>CQ</Company>
     <Product>CQ</Product>
     <Description>封装StackExchange.Redis的类库，增加了Mock机制、缓存随机过期时间机制（防止缓存雪崩）。</Description>
-    <Version>1.0.2</Version>
+    <Version>1.0.3</Version>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Logging" Version="2.2.0" />
     <PackageReference Include="Microsoft.Extensions.Options" Version="2.2.0" />
+    <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="2.2.0" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
     <PackageReference Include="StackExchange.Redis" Version="2.0.601" />
   </ItemGroup>
