--- a/CQ.Foundation.AspNetCore/CQ.Foundation.AspNetCore.csproj
+++ b/CQ.Foundation.AspNetCore/CQ.Foundation.AspNetCore.csproj
@@ -3,6 +3,8 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
+    <Version>1.0.2</Version>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
   </PropertyGroup>
 
   <ItemGroup>
