--- a/Demo/IdentityDemo/IdentityDemo.csproj
+++ b/Demo/IdentityDemo/IdentityDemo.csproj
@@ -10,6 +10,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="CQ.Foundation.AspNetCore" Version="1.0.1" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="2.2.0" />
@@ -23,7 +24,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\CQ.Foundation.AspNetCore\CQ.Foundation.AspNetCore.csproj" />
     <ProjectReference Include="..\..\CQ.Foundation\CQ.Foundation.csproj" />
   </ItemGroup>
 
